--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Roboto:ital@0;1&display=swap');
+
+
 body, html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
 
+h1 {
+  font-family: 'Montserrat Alternates', sans-serif;
+  padding-left: 12px;
+}
 
 .app-container {
     display: flex;
@@ -19,7 +26,7 @@ body, html {
   background-color: #fff;
   border-top: 1px solid #ccc;
   height: 60px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
@@ -72,6 +79,37 @@ body, html {
 
 
 .sensor-reading {
-  background-color: #aed2ea;
+  text-align: center;
+  /* background-color: #f8f8f8; */
+  display: inline-block;
+  margin: 12px;
+  padding: 5%;
+  border-radius: 5px;
+  color: #141414;
+  /* color: palevioletred; */
+  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2); /* Add drop shadow */
 }
 
+.sensor-value.orange{
+  color: #FB8500;
+}
+
+.sensor-value.green{
+  color: #10E258;
+}
+
+.sensor-value.blue{
+  color: #8ECAE6;
+}
+
+
+.sensor-value {
+  font-size: 3rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.homePanel {
+  /* border: 1px solid pink; */
+  margin-bottom: 13%;
+}
