--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
 }
 
 h1 {
@@ -39,7 +40,6 @@ h1 {
 }
 
 .nav-item img {
-  max-width: 24px; /* Set a maximum width for the icons */
   max-height: 24px; /* Set a maximum height for the icons */
 }
 
@@ -79,15 +79,17 @@ h1 {
 
 
 .sensor-reading {
+  background-color: #fff;
+  /* border: 1px solid salmon; */
+  width: 25%;
   text-align: center;
   /* background-color: #f8f8f8; */
   display: inline-block;
   margin: 12px;
-  padding: 5%;
-  border-radius: 5px;
+  padding: 40px;
+  border-radius: 15px;
   color: #141414;
-  /* color: palevioletred; */
-  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2); /* Add drop shadow */
+  box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2);
 }
 
 .sensor-value.orange{
@@ -112,4 +114,113 @@ h1 {
 .homePanel {
   /* border: 1px solid pink; */
   margin-bottom: 13%;
+  /* background-color: #10E258; */
+}
+
+
+
+.overview {
+  background-color: #fff;
+  border-radius: 15px;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid salmon; */
+  padding: 15px;
+  text-align: center;
+  box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2);
+}
+
+.overview-topbar {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  grid-template-rows: 33% 33% 33%;
+  /* border: 1px solid pink; */
+}
+
+.overview-bottombar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  text-align: center;
+  border-top: 1px solid #ccc;
+}
+
+.overview-location {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end:2;
+  /* border: 1px dotted pink; */
+  /* height: 100px; */
+  font-size: 1.4rem;
+  font-weight: 800;
+  margin: auto;
+  /* padding: 12px; */
+}
+
+.overview-temperature {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  font-size: 3.4rem;
+  align-self: center;
+  font-weight: 800;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+.overview-hi {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  margin: 4px;
+  align-self: center;
+}
+
+.overview-lo {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  margin: 4px;
+  align-self: center;
+}
+
+
+.value {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.update {
+  text-align: center;
+}
+
+/* Media query for mobile screens (adjust the max-width as needed) */
+@media screen and (max-width: 768px) {
+  .sensor-reading {
+    width: 100px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .sensor-label {
+    font-size: 12px;
+    white-space: nowrap;
+    text-align: center;
+  }
+
+  .sensor-value {
+    font-size: 32px; /* Set the same font size as for non-mobile screens */
+    /* padding: 20px; */
+  }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
