--- a/src/App.css
+++ b/src/App.css
@@ -92,12 +92,21 @@ h1 {
   box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2);
 }
 
+.sensor-reading.green {
+  box-shadow: 0px 0px 15px rgba(80, 228, 107, 0.9);
+}
+
+.sensor-reading.blue {
+  box-shadow: 0px 0px 15px rgba(60, 179, 238, 0.9);
+}
+
 .sensor-value.orange{
   color: #FB8500;
 }
 
 .sensor-value.green{
   color: #10E258;
+  
 }
 
 .sensor-value.blue{
