--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ h1 {
 
 
 .sensor-reading {
-  background-color: #fff;
+  background-color: hsl(0, 0%, 100%);
   /* border: 1px solid salmon; */
   width: 25%;
   text-align: center;
@@ -89,7 +89,8 @@ h1 {
   padding: 40px;
   border-radius: 15px;
   color: #141414;
-  box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2);
+  /* box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2); */
+  box-shadow: 5px 5px 10px 0px rgba(28, 28, 28, 0.12), -5px -5px 10px 0px rgba(255, 255, 255, 0.24)
 }
 
 .sensor-reading.green {
@@ -138,7 +139,8 @@ h1 {
   /* border: 1px solid salmon; */
   padding: 15px;
   text-align: center;
-  box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2);
+  /* box-shadow: 1px 3px 2px rgba(174, 174, 174, 0.2); */
+  box-shadow: 10px 10px 17px -5px rgba(28, 28, 28, 0.12), -10px -10px 40px -5px rgba(233, 243, 241, 0.24)
 }
 
 .overview-topbar {
